fixed spacing problem

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,3 +94,7 @@ font-size: 20px;
 #x-score {
   text-align: center;
 }
+
+#o-score {
+  text-align: center;
+}
